JSAI/error/src/test/resources/base/notjslibrary_a006.js
var i = "20" - "40";
print(i);
i;
